[package]
name = "networker-bgp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

tracing = "0.1"
tracing-subscriber = "0.3.0"

tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
