[package]
name = "networker-filter-map"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

tracing = "0.1"
tracing-subscriber = "0.3.0"

tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
