[package]
name = "networker-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3.0"

tonic = "0.13"
prost = "0.13"

rtnetlink = "0.17"
nix = { version = "0.30", default-features = false, features = [
    "dir",
    "fs",
    "sched",
] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
