[package]
name = "networker-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

tonic = "0.13"
prost = "0.13"

rtnetlink = "0.17"
nix = { version = "0.30", default-features = false, features = [
    "dir",
    "fs",
    "sched",
] }
notify = "6"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
